[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/OldMan/OldManIdle1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/OldMan/OldManIdle2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/OldMan/OldManTalk2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/OldMan/OldManTalk1.png" type="Texture" id=4]
[ext_resource path="res://Scripts/OldMan.gd" type="Script" id=5]
[ext_resource path="res://Sprites/UI/LongGlyphSpeak-export.fnt" type="BitmapFont" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Talking",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59, 9 )

[node name="OldMan" type="AnimatedSprite"]
frames = SubResource( 1 )
animation = "Idle"
playing = true
script = ExtResource( 5 )

[node name="TalkTween" type="Tween" parent="."]

[node name="TalkCooldown" type="Timer" parent="."]

[node name="TalkSoundCooldown" type="Timer" parent="."]

[node name="Area" type="Area2D" parent="."]
position = Vector2( 14, 0 )
z_index = 1
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
position = Vector2( -3, -1 )
shape = SubResource( 2 )

[node name="Talk" type="Node2D" parent="."]
position = Vector2( 0, -16 )
z_index = 10

[node name="TalkLabel" type="RichTextLabel" parent="Talk"]
margin_left = -58.0
margin_top = -14.0
margin_right = 60.0
margin_bottom = 4.0
custom_fonts/normal_font = ExtResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
bbcode_enabled = true
bbcode_text = "oh it's you again"
visible_characters = 0
percent_visible = 0.0
text = "oh it's you again"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="TalkCooldown" to="." method="RecoverCooldown"]
[connection signal="timeout" from="TalkSoundCooldown" to="." method="TalkSound"]
[connection signal="body_entered" from="Area" to="." method="PlayerEntered"]
